--- a/demo/src/main/resources/com/example/demo/hello-view.fxml
+++ b/demo/src/main/resources/com/example/demo/hello-view.fxml
@@ -1,16 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.demo.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<Pane id="homepane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="959.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+   <children>
+      <ImageView id="HomebackgroundImage" fitHeight="540.0" fitWidth="959.0">
+         <image>
+            <Image url="@../../../mountain.jpeg" />
+         </image>
+      </ImageView>
+      <Label id="label1" alignment="CENTER" layoutX="323.0" layoutY="78.0" prefHeight="53.0" prefWidth="313.0" text="STICK HERO">
+         <font>
+            <Font name="Arial Bold" size="46.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="119.0" fitWidth="125.0" layoutX="417.0" layoutY="298.0">
+         <image>
+            <Image url="@../../../stickhero.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="75.0" layoutX="442.0" layoutY="390.0">
+         <image>
+            <Image url="@../../../block.jpg" />
+         </image>
+      </ImageView>
+      <Button id="Playbutton" layoutX="433.0" layoutY="198.0" mnemonicParsing="false" onAction="#onPlaybuttonclick" prefHeight="94.0" prefWidth="94.0" style="-fx-background-color: red; -fx-background-radius: 300;" text="Play" textFill="WHITE">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Button>
+      <Button id="Settingsbutton" layoutX="759.0" layoutY="323.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="94.0" style="-fx-background-color: red; -fx-background-radius: 300;" textFill="WHITE">
+         <font>
+            <Font size="25.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="60.0" fitWidth="60.0">
+               <image>
+                  <Image url="@../../../settings.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button id="Helpbutton" layoutX="115.0" layoutY="323.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="94.0" style="-fx-background-color: red; -fx-background-radius: 300;" text="HELP" textFill="WHITE">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Button>
+   </children>
+</Pane>
