changes to various ui

--- a/demo/src/main/resources/com/example/demo/HomePage.fxml
+++ b/demo/src/main/resources/com/example/demo/HomePage.fxml
@@ -4,37 +4,27 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane id="homepane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="959.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView id="HomebackgroundImage" fitHeight="540.0" fitWidth="959.0">
+      <ImageView id="HomebackgroundImage" fitHeight="585.0" fitWidth="600.0" layoutX="1.0" layoutY="1.0" opacity="0.68">
          <image>
             <Image url="@../../../mountain.jpeg" />
          </image>
       </ImageView>
-      <Label id="label1" alignment="CENTER" layoutX="323.0" layoutY="78.0" prefHeight="53.0" prefWidth="313.0" text="STICK HERO">
+      <Label id="label1" alignment="CENTER" layoutX="146.0" layoutY="85.0" prefHeight="53.0" prefWidth="313.0" text="STICK HERO">
          <font>
             <Font name="Arial Bold" size="46.0" />
          </font>
       </Label>
-      <ImageView fitHeight="119.0" fitWidth="125.0" layoutX="417.0" layoutY="298.0">
-         <image>
-            <Image url="@../../../stickhero.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="150.0" fitWidth="75.0" layoutX="442.0" layoutY="390.0">
-         <image>
-            <Image url="@../../../block.jpg" />
-         </image>
-      </ImageView>
-      <Button id="Playbutton" layoutX="433.0" layoutY="198.0" mnemonicParsing="false" onAction="#onPlaybuttonclick" prefHeight="94.0" prefWidth="94.0" style="-fx-background-color: red; -fx-background-radius: 300;" text="Play" textFill="WHITE">
+      <Button id="Playbutton" layoutX="255.0" layoutY="184.0" mnemonicParsing="false" onAction="#onPlaybuttonclick" prefHeight="94.0" prefWidth="94.0" style="-fx-background-color: red; -fx-background-radius: 300;" text="Play" textFill="WHITE">
          <font>
             <Font size="25.0" />
          </font>
       </Button>
-      <Button id="Settingsbutton" layoutX="759.0" layoutY="323.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="94.0" style="-fx-background-color: red; -fx-background-radius: 300;" textFill="WHITE">
+      <Button id="Settingsbutton" layoutX="463.0" layoutY="338.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="94.0" style="-fx-background-color: red; -fx-background-radius: 300;" textFill="WHITE">
          <font>
             <Font size="25.0" />
          </font>
@@ -46,10 +36,20 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button id="Helpbutton" layoutX="115.0" layoutY="323.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="94.0" style="-fx-background-color: red; -fx-background-radius: 300;" text="HELP" textFill="WHITE">
+      <Button id="Helpbutton" layoutX="52.0" layoutY="338.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="94.0" style="-fx-background-color: red; -fx-background-radius: 300;" text="HELP" textFill="WHITE">
          <font>
             <Font size="22.0" />
          </font>
       </Button>
+      <ImageView id="StickHeroImage" fitHeight="144.0" fitWidth="145.0" layoutX="229.0" layoutY="260.0">
+         <image>
+            <Image url="@../../../stickhero.png" />
+         </image>
+      </ImageView>
+      <ImageView id="Pillar1" fitHeight="217.0" fitWidth="110.0" layoutX="247.0" layoutY="368.0">
+         <image>
+            <Image url="@../../../block.jpg" />
+         </image>
+      </ImageView>
    </children>
-</Pane>
+</AnchorPane>
