--- a/demo/src/main/resources/com/example/demo/GameOver.fxml
+++ b/demo/src/main/resources/com/example/demo/GameOver.fxml
@@ -6,16 +6,17 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+<AnchorPane prefHeight="585.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
    <children>
-      <ImageView fitHeight="540.0" fitWidth="960.0" opacity="0.21" pickOnBounds="true">
+      <ImageView fitHeight="585.0" fitWidth="600.0" opacity="0.21" pickOnBounds="true">
          <image>
             <Image url="@../../../mountain2.jpg" />
          </image>
       </ImageView>
-      <Pane layoutX="288.0" layoutY="22.0" prefHeight="458.0" prefWidth="384.0" style="-fx-background-color: gray; -fx-border-color: black; -fx-border-width: 10;">
+      <Pane layoutX="108.0" layoutY="64.0" prefHeight="458.0" prefWidth="384.0" style="-fx-background-color: gray; -fx-border-color: black; -fx-border-width: 10;">
          <children>
             <Label layoutX="258.0" layoutY="407.0" text="Redo using cherries">
                <font>
@@ -48,7 +49,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="CENTER" layoutX="148.0" layoutY="311.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: gray;">
+            <Button alignment="CENTER" layoutX="151.0" layoutY="309.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: gray;">
                <graphic>
                   <ImageView fitHeight="69.0" fitWidth="73.0">
                      <image>
@@ -56,19 +57,24 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button alignment="CENTER" layoutX="269.0" layoutY="311.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: gray;">
-               <graphic>
-                  <ImageView fitHeight="69.0" fitWidth="73.0">
+            <StackPane layoutX="269.0" layoutY="309.0" prefHeight="89.0" prefWidth="88.0">
+               <children>
+                  <Button alignment="CENTER" mnemonicParsing="false" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: gray;">
+                     <graphic>
+                        <ImageView fitHeight="69.0" fitWidth="73.0">
+                           <image>
+                              <Image url="@../../../redo.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <ImageView fitHeight="34.0" fitWidth="37.0" opacity="0.57">
                      <image>
-                        <Image url="@../../../redo.png" />
+                        <Image url="@../../../cherries.png" />
                      </image>
                   </ImageView>
-               </graphic></Button>
-            <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="301.0" layoutY="424.0">
-               <image>
-                  <Image url="@../../../cherries.png" />
-               </image>
-            </ImageView>
+               </children>
+            </StackPane>
          </children>
       </Pane>
    </children>
