--- a/demo/src/main/resources/com/example/demo/GameOver.fxml
+++ b/demo/src/main/resources/com/example/demo/GameOver.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="724.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+<AnchorPane prefHeight="724.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.OverController">
    <children>
       <ImageView fitHeight="724.0" fitWidth="600.0" opacity="0.21" pickOnBounds="true">
          <image>
             <Image url="@../../../mountain2.jpg" />
          </image>
       </ImageView>
-      <Pane layoutX="108.0" layoutY="133.0" prefHeight="458.0" prefWidth="384.0" style="-fx-background-color: gray; -fx-border-color: black; -fx-border-width: 10;">
+      <Pane layoutX="108.0" layoutY="133.0" prefHeight="458.0" prefWidth="384.0" style="-fx-background-color: grey; -fx-border-color: black; -fx-border-width: 10;">
          <children>
             <Label layoutX="258.0" layoutY="407.0" text="Redo using cherries">
                <font>
@@ -40,7 +40,7 @@
                </font>
             </Label>
             <Label id="HighScore" contentDisplay="CENTER" layoutX="168.0" layoutY="217.0" prefHeight="25.0" prefWidth="49.0" style="-fx-background-color: white;" />
-            <Button alignment="CENTER" layoutX="28.0" layoutY="309.0" mnemonicParsing="false" onAction="#onHomeButtonclick" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: gray;">
+            <Button alignment="CENTER" layoutX="28.0" layoutY="309.0" mnemonicParsing="false" onAction="#onHomeButtonclick" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: grey;">
                <graphic>
                   <ImageView fitHeight="81.0" fitWidth="67.0">
                      <image>
@@ -49,7 +49,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="CENTER" layoutX="151.0" layoutY="309.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: gray;">
+            <Button alignment="CENTER" layoutX="151.0" layoutY="309.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: grey;">
                <graphic>
                   <ImageView fitHeight="69.0" fitWidth="73.0">
                      <image>
@@ -59,7 +59,7 @@
                </graphic></Button>
             <StackPane layoutX="269.0" layoutY="309.0" prefHeight="89.0" prefWidth="88.0">
                <children>
-                  <Button alignment="CENTER" mnemonicParsing="false" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: gray;">
+                  <Button alignment="CENTER" mnemonicParsing="false" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: grey;">
                      <graphic>
                         <ImageView fitHeight="69.0" fitWidth="73.0">
                            <image>
