--- a/demo/src/main/resources/com/example/demo/stick.fxml
+++ b/demo/src/main/resources/com/example/demo/stick.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
 
+<?import javafx.scene.shape.Rectangle?>
 <fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <Rectangle fx:id="block" fill="black"  width="5" />
-
+    <Rectangle fx:id="stick" fill="black" height="100" width="5"/>
 </fx:root>
