--- a/demo/src/main/resources/com/example/demo/game.fxml
+++ b/demo/src/main/resources/com/example/demo/game.fxml
@@ -25,7 +25,7 @@
                 <Font size="28.0" />
             </font>
         </Label>
-        <Label id="CurrentScore" layoutX="342.0" layoutY="40.0" prefHeight="27.0" prefWidth="44.0" style="-fx-background-color: white;" />
+        <Scores fx:id="scorern" layoutX="342.0" layoutY="40.0" prefHeight="27.0" prefWidth="44.0" />
         <Label id="NumCherries" layoutX="558.0" layoutY="73.0" prefHeight="17.0" prefWidth="34.0" style="-fx-background-color: white;" />
     </children>
 </AnchorPane>
