--- a/demo/src/main/resources/com/example/demo/GameOver.fxml
+++ b/demo/src/main/resources/com/example/demo/GameOver.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
+<?import com.example.demo.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="724.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.OverController">
+<AnchorPane prefHeight="724.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.OverController">
    <children>
       <ImageView fitHeight="724.0" fitWidth="600.0" opacity="0.21" pickOnBounds="true">
          <image>
@@ -33,13 +30,11 @@
                   <Font size="27.0" />
                </font>
             </Label>
-            <Label id="GameScore" contentDisplay="CENTER" layoutX="168.0" layoutY="120.0" prefHeight="25.0" prefWidth="49.0" style="-fx-background-color: white;" />
             <Label id="label3" layoutX="115.0" layoutY="169.0" text="HIGH SCORE">
                <font>
                   <Font size="27.0" />
                </font>
             </Label>
-            <Label id="HighScore" contentDisplay="CENTER" layoutX="168.0" layoutY="217.0" prefHeight="25.0" prefWidth="49.0" style="-fx-background-color: white;" />
             <Button alignment="CENTER" layoutX="28.0" layoutY="309.0" mnemonicParsing="false" onAction="#onHomeButtonclick" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: grey;">
                <graphic>
                   <ImageView fitHeight="81.0" fitWidth="67.0">
@@ -49,7 +44,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="CENTER" layoutX="151.0" layoutY="309.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: grey;">
+            <Button alignment="CENTER" layoutX="151.0" layoutY="309.0" mnemonicParsing="false" onAction="#onReplayButtonClick" prefHeight="89.0" prefWidth="88.0" style="-fx-background-color: grey;">
                <graphic>
                   <ImageView fitHeight="69.0" fitWidth="73.0">
                      <image>
@@ -75,6 +70,8 @@
                   </ImageView>
                </children>
             </StackPane>
+            <Scores fx:id="Finalscore" layoutX="170.0" layoutY="116.0" />
+            <Scores fx:id="Highscore" layoutX="170.0" layoutY="208.0" />
          </children>
       </Pane>
    </children>
