--- a/demo/src/main/resources/com/example/demo/score.fxml
+++ b/demo/src/main/resources/com/example/demo/score.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.Rectangle?>
-
 <?import javafx.scene.control.Label?>
-<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <Label fx:id="scorecard" text="0"/>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+
+<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+    <Label fx:id="scorecard" alignment="CENTER" contentDisplay="CENTER" prefHeight="53.0" prefWidth="51.0" text="0">
+      <font>
+         <Font size="36.0" />
+      </font></Label>
 </fx:root>
