--- a/demo/src/main/resources/com/example/demo/GameOver.fxml
+++ b/demo/src/main/resources/com/example/demo/GameOver.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.example.demo.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="724.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.OverController">
+<AnchorPane prefHeight="724.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.OverController">
    <children>
       <ImageView fitHeight="724.0" fitWidth="600.0" opacity="0.21" pickOnBounds="true">
          <image>
@@ -70,8 +73,14 @@
                   </ImageView>
                </children>
             </StackPane>
-            <Scores fx:id="Finalscore" layoutX="170.0" layoutY="116.0" />
-            <Scores fx:id="Highscore" layoutX="170.0" layoutY="208.0" />
+            <Label fx:id="Finalscore" alignment="CENTER" layoutX="170.0" layoutY="116.0" prefHeight="39.0" prefWidth="47.0" text="0" textAlignment="CENTER">
+               <font>
+                  <Font size="33.0" />
+               </font></Label>
+            <Label fx:id="Highscore" alignment="CENTER" layoutX="170.0" layoutY="208.0" prefHeight="39.0" prefWidth="47.0" text="0" textAlignment="CENTER">
+               <font>
+                  <Font size="33.0" />
+               </font></Label>
          </children>
       </Pane>
    </children>
