--- a/demo/src/main/resources/com/example/demo/cherry.fxml
+++ b/demo/src/main/resources/com/example/demo/cherry.fxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
 
 <fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <Rectangle fx:id="block" fill="black"  width="5" />
+  <ImageView fx:id="cherry" fitHeight="43.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
+     <image>
+        <Image url="@../../../cherries.png" />
+     </image>
+  </ImageView>
+
 
 </fx:root>
