--- a/demo/src/main/resources/com/example/demo/game.fxml
+++ b/demo/src/main/resources/com/example/demo/game.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.example.demo.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="gameRoot" prefHeight="733.0" prefWidth="600.0" style="-fx-border-width: 1080;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.GameController">
+<AnchorPane fx:id="gameRoot" prefHeight="733.0" prefWidth="600.0" style="-fx-border-width: 1080;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.GameController">
     <children>
         <ImageView fitHeight="733.0" fitWidth="600.0" opacity="0.53" pickOnBounds="true">
             <image>
@@ -24,7 +25,15 @@
                 <Font size="28.0" />
             </font>
         </Label>
-        <Scores fx:id="scorern" layoutX="337.0" layoutY="27.0" prefHeight="27.0" prefWidth="44.0" />
+        <Label fx:id="gamescore" alignment="CENTER" layoutX="337.0" layoutY="29.0" prefHeight="49.0" prefWidth="59.0" text="0">
+         <font>
+            <Font size="33.0" />
+         </font></Label>
         <Label id="NumCherries" layoutX="558.0" layoutY="73.0" prefHeight="17.0" prefWidth="34.0" style="-fx-background-color: white;" />
+      <AnchorPane layoutX="46.0" layoutY="31.0" prefHeight="40.0" prefWidth="91.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#onSaveButtonclick" prefHeight="45.0" prefWidth="91.0" text="SAVE" />
+         </children>
+      </AnchorPane>
     </children>
 </AnchorPane>
